docs: record Campaign 34 (cutout full-bleed + run_bounded + jdk.compiler)